shared/newton_dynamics/newton.odin


    @(link_name="NewtonConstraintCreateCorkscrew")
    NewtonConstraintCreateCorkscrew :: proc(newtonWorld : ^NewtonWorld, pivotPoint : ^dFloat, pinDir : ^dFloat, childBody : ^NewtonBody, parentBody : ^NewtonBody) -> ^NewtonJoint ---

    @(link_name="NewtonCorkscrewSetUserCallback")
    NewtonCorkscrewSetUserCallback :: proc(corkscrew : ^NewtonJoint, callback : NewtonCorkscrewCallback) ---

    @(link_name="NewtonCorkscrewGetJointPosit")
    NewtonCorkscrewGetJointPosit :: proc(corkscrew : ^NewtonJoint) -> dFloat ---

    @(link_name="NewtonCorkscrewGetJointAngle")
    NewtonCorkscrewGetJointAngle :: proc(corkscrew : ^NewtonJoint) -> dFloat ---

    @(link_name="NewtonCorkscrewGetJointVeloc")
    NewtonCorkscrewGetJointVeloc :: proc(corkscrew : ^NewtonJoint) -> dFloat ---

    @(link_name="NewtonCorkscrewGetJointOmega")
    NewtonCorkscrewGetJointOmega :: proc(corkscrew : ^NewtonJoint) -> dFloat ---

    @(link_name="NewtonCorkscrewGetJointForce")
    NewtonCorkscrewGetJointForce :: proc(corkscrew : ^NewtonJoint, force : ^dFloat) ---

    @(link_name="NewtonCorkscrewCalculateStopAlpha")
    NewtonCorkscrewCalculateStopAlpha :: proc(corkscrew : ^NewtonJoint, desc : ^NewtonHingeSliderUpdateDesc, angle : dFloat) -> dFloat ---

    @(link_name="NewtonCorkscrewCalculateStopAccel")
    NewtonCorkscrewCalculateStopAccel :: proc(corkscrew : ^NewtonJoint, desc : ^NewtonHingeSliderUpdateDesc, position : dFloat) -> dFloat ---

    @(link_name="NewtonConstraintCreateUniversal")
    NewtonConstraintCreateUniversal :: proc(newtonWorld : ^NewtonWorld, pivotPoint : ^dFloat, pinDir0 : ^dFloat, pinDir1 : ^dFloat, childBody : ^NewtonBody, parentBody : ^NewtonBody) -> ^NewtonJoint ---

    @(link_name="NewtonUniversalSetUserCallback")
    NewtonUniversalSetUserCallback :: proc(universal : ^NewtonJoint, callback : NewtonUniversalCallback) ---

    @(link_name="NewtonUniversalGetJointAngle0")
    NewtonUniversalGetJointAngle0 :: proc(universal : ^NewtonJoint) -> dFloat ---

    @(link_name="NewtonUniversalGetJointAngle1")
    NewtonUniversalGetJointAngle1 :: proc(universal : ^NewtonJoint) -> dFloat ---

    @(link_name="NewtonUniversalGetJointOmega0")
    NewtonUniversalGetJointOmega0 :: proc(universal : ^NewtonJoint) -> dFloat ---

    @(link_name="NewtonUniversalGetJointOmega1")
    NewtonUniversalGetJointOmega1 :: proc(universal : ^NewtonJoint) -> dFloat ---

    @(link_name="NewtonUniversalGetJointForce")
    NewtonUniversalGetJointForce :: proc(universal : ^NewtonJoint, force : ^dFloat) ---

    @(link_name="NewtonUniversalCalculateStopAlpha0")
    NewtonUniversalCalculateStopAlpha0 :: proc(universal : ^NewtonJoint, desc : ^NewtonHingeSliderUpdateDesc, angle : dFloat) -> dFloat ---

    @(link_name="NewtonUniversalCalculateStopAlpha1")
    NewtonUniversalCalculateStopAlpha1 :: proc(universal : ^NewtonJoint, desc : ^NewtonHingeSliderUpdateDesc, angle : dFloat) -> dFloat ---

    @(link_name="NewtonConstraintCreateUpVector")
    NewtonConstraintCreateUpVector :: proc(newtonWorld : ^NewtonWorld, pinDir : ^dFloat, body : ^NewtonBody) -> ^NewtonJoint ---

    @(link_name="NewtonUpVectorGetPin")
    NewtonUpVectorGetPin :: proc(upVector : ^NewtonJoint, pin : ^dFloat) ---

    @(link_name="NewtonUpVectorSetPin")
    NewtonUpVectorSetPin :: proc(upVector : ^NewtonJoint, pin : ^dFloat) ---

    @(link_name="NewtonConstraintCreateUserJoint")
    NewtonConstraintCreateUserJoint :: proc(newtonWorld : ^NewtonWorld, maxDOF : i32, callback : NewtonUserBilateralCallback, childBody : ^NewtonBody, parentBody : ^NewtonBody) -> ^NewtonJoint ---

    @(link_name="NewtonUserJointGetSolverModel")
    NewtonUserJointGetSolverModel :: proc(joint : ^NewtonJoint) -> i32 ---

    @(link_name="NewtonUserJointSetSolverModel")
    NewtonUserJointSetSolverModel :: proc(joint : ^NewtonJoint, model : i32) ---

    @(link_name="NewtonUserJointMassScale")
    NewtonUserJointMassScale :: proc(joint : ^NewtonJoint, scaleBody0 : dFloat, scaleBody1 : dFloat) ---

    @(link_name="NewtonUserJointSetFeedbackCollectorCallback")
    NewtonUserJointSetFeedbackCollectorCallback :: proc(joint : ^NewtonJoint, getFeedback : NewtonUserBilateralCallback) ---

    @(link_name="NewtonUserJointAddLinearRow")
    NewtonUserJointAddLinearRow :: proc(joint : ^NewtonJoint, pivot0 : ^dFloat, pivot1 : ^dFloat, dir : ^dFloat) ---

    @(link_name="NewtonUserJointAddAngularRow")
    NewtonUserJointAddAngularRow :: proc(joint : ^NewtonJoint, relativeAngle : dFloat, dir : ^dFloat) ---

    @(link_name="NewtonUserJointAddGeneralRow")
    NewtonUserJointAddGeneralRow :: proc(joint : ^NewtonJoint, jacobian0 : ^dFloat, jacobian1 : ^dFloat) ---

    @(link_name="NewtonUserJointSetRowMinimumFriction")
    NewtonUserJointSetRowMinimumFriction :: proc(joint : ^NewtonJoint, friction : dFloat) ---

    @(link_name="NewtonUserJointSetRowMaximumFriction")
    NewtonUserJointSetRowMaximumFriction :: proc(joint : ^NewtonJoint, friction : dFloat) ---

    @(link_name="NewtonUserJointCalculateRowZeroAcceleration")
    NewtonUserJointCalculateRowZeroAcceleration :: proc(joint : ^NewtonJoint) -> dFloat ---

    @(link_name="NewtonUserJointGetRowAcceleration")
    NewtonUserJointGetRowAcceleration :: proc(joint : ^NewtonJoint) -> dFloat ---

    @(link_name="NewtonUserJointGetRowJacobian")
    NewtonUserJointGetRowJacobian :: proc(joint : ^NewtonJoint, linear0 : ^dFloat, angula0 : ^dFloat, linear1 : ^dFloat, angula1 : ^dFloat) ---

    @(link_name="NewtonUserJointSetRowAcceleration")
    NewtonUserJointSetRowAcceleration :: proc(joint : ^NewtonJoint, acceleration : dFloat) ---

    @(link_name="NewtonUserJointSetRowMassDependentSpringDamperAcceleration")
    NewtonUserJointSetRowMassDependentSpringDamperAcceleration :: proc(joint : ^NewtonJoint, spring : dFloat, damper : dFloat) ---

    @(link_name="NewtonUserJointSetRowMassIndependentSpringDamperAcceleration")
    NewtonUserJointSetRowMassIndependentSpringDamperAcceleration :: proc(joint : ^NewtonJoint, rowStiffness : dFloat, spring : dFloat, damper : dFloat) ---

    @(link_name="NewtonUserJointSetRowStiffness")
    NewtonUserJointSetRowStiffness :: proc(joint : ^NewtonJoint, stiffness : dFloat) ---

    @(link_name="NewtonUserJoinRowsCount")
    NewtonUserJoinRowsCount :: proc(joint : ^NewtonJoint) -> i32 ---

    @(link_name="NewtonUserJointGetGeneralRow")
    NewtonUserJointGetGeneralRow :: proc(joint : ^NewtonJoint, index : i32, jacobian0 : ^dFloat, jacobian1 : ^dFloat) ---

    @(link_name="NewtonUserJointGetRowForce")
    NewtonUserJointGetRowForce :: proc(joint : ^NewtonJoint, row : i32) -> dFloat ---

    @(link_name="NewtonMeshCreate")
    NewtonMeshCreate :: proc(newtonWorld : ^NewtonWorld) -> ^NewtonMesh ---

    @(link_name="NewtonMeshCreateFromMesh")
    NewtonMeshCreateFromMesh :: proc(mesh : ^NewtonMesh) -> ^NewtonMesh ---

    @(link_name="NewtonMeshCreateFromCollision")
    NewtonMeshCreateFromCollision :: proc(collision : ^NewtonCollision) -> ^NewtonMesh ---

    @(link_name="NewtonMeshCreateTetrahedraIsoSurface")
    NewtonMeshCreateTetrahedraIsoSurface :: proc(mesh : ^NewtonMesh) -> ^NewtonMesh ---

    @(link_name="NewtonMeshCreateConvexHull")
    NewtonMeshCreateConvexHull :: proc(newtonWorld : ^NewtonWorld, pointCount : i32, vertexCloud : ^dFloat, strideInBytes : i32, tolerance : dFloat) -> ^NewtonMesh ---

    @(link_name="NewtonMeshCreateVoronoiConvexDecomposition")
    NewtonMeshCreateVoronoiConvexDecomposition :: proc(newtonWorld : ^NewtonWorld, pointCount : i32, vertexCloud : ^dFloat, strideInBytes : i32, materialID : i32, textureMatrix : ^dFloat) -> ^NewtonMesh ---

    @(link_name="NewtonMeshCreateFromSerialization")
    NewtonMeshCreateFromSerialization :: proc(newtonWorld : ^NewtonWorld, deserializeFunction : NewtonDeserializeCallback, serializeHandle : rawptr) -> ^NewtonMesh ---

    @(link_name="NewtonMeshDestroy")
    NewtonMeshDestroy :: proc(mesh : ^NewtonMesh) ---

    @(link_name="NewtonMeshSerialize")
    NewtonMeshSerialize :: proc(mesh : ^NewtonMesh, serializeFunction : NewtonSerializeCallback, serializeHandle : rawptr) ---

    @(link_name="NewtonMeshSaveOFF")
    NewtonMeshSaveOFF :: proc(mesh : ^NewtonMesh, filename : cstring) ---

    @(link_name="NewtonMeshLoadOFF")
    NewtonMeshLoadOFF :: proc(newtonWorld : ^NewtonWorld, filename : cstring) -> ^NewtonMesh ---

    @(link_name="NewtonMeshLoadTetrahedraMesh")
    NewtonMeshLoadTetrahedraMesh :: proc(newtonWorld : ^NewtonWorld, filename : cstring) -> ^NewtonMesh ---

    @(link_name="NewtonMeshFlipWinding")
    NewtonMeshFlipWinding :: proc(mesh : ^NewtonMesh) ---

    @(link_name="NewtonMeshApplyTransform")
    NewtonMeshApplyTransform :: proc(mesh : ^NewtonMesh, matrix4x4 : ^dFloat) ---

    @(link_name="NewtonMeshCalculateOOBB")
    NewtonMeshCalculateOOBB :: proc(mesh : ^NewtonMesh, matrix4x4 : ^dFloat, x : ^dFloat, y : ^dFloat, z : ^dFloat) ---

    @(link_name="NewtonMeshCalculateVertexNormals")
    NewtonMeshCalculateVertexNormals :: proc(mesh : ^NewtonMesh, angleInRadians : dFloat) ---

    @(link_name="NewtonMeshApplySphericalMapping")
    NewtonMeshApplySphericalMapping :: proc(mesh : ^NewtonMesh, material : i32, aligmentMatrix : ^dFloat) ---

    @(link_name="NewtonMeshApplyCylindricalMapping")
    NewtonMeshApplyCylindricalMapping :: proc(mesh : ^NewtonMesh, cylinderMaterial : i32, capMaterial : i32, aligmentMatrix : ^dFloat) ---

    @(link_name="NewtonMeshApplyBoxMapping")
    NewtonMeshApplyBoxMapping :: proc(mesh : ^NewtonMesh, frontMaterial : i32, sideMaterial : i32, topMaterial : i32, aligmentMatrix : ^dFloat) ---

    @(link_name="NewtonMeshApplyAngleBasedMapping")
    NewtonMeshApplyAngleBasedMapping :: proc(mesh : ^NewtonMesh, material : i32, reportPrograssCallback : NewtonReportProgress, reportPrgressUserData : rawptr, aligmentMatrix : ^dFloat) ---

    @(link_name="NewtonCreateTetrahedraLinearBlendSkinWeightsChannel")
    NewtonCreateTetrahedraLinearBlendSkinWeightsChannel :: proc(tetrahedraMesh : ^NewtonMesh, skinMesh : ^NewtonMesh) ---

    @(link_name="NewtonMeshOptimize")
    NewtonMeshOptimize :: proc(mesh : ^NewtonMesh) ---

    @(link_name="NewtonMeshOptimizePoints")
    NewtonMeshOptimizePoints :: proc(mesh : ^NewtonMesh) ---

    @(link_name="NewtonMeshOptimizeVertex")
    NewtonMeshOptimizeVertex :: proc(mesh : ^NewtonMesh) ---

    @(link_name="NewtonMeshIsOpenMesh")
    NewtonMeshIsOpenMesh :: proc(mesh : ^NewtonMesh) -> i32 ---

    @(link_name="NewtonMeshFixTJoints")
    NewtonMeshFixTJoints :: proc(mesh : ^NewtonMesh) ---

    @(link_name="NewtonMeshPolygonize")
    NewtonMeshPolygonize :: proc(mesh : ^NewtonMesh) ---

    @(link_name="NewtonMeshTriangulate")
    NewtonMeshTriangulate :: proc(mesh : ^NewtonMesh) ---

    @(link_name="NewtonMeshUnion")
    NewtonMeshUnion :: proc(mesh : ^NewtonMesh, clipper : ^NewtonMesh, clipperMatrix : ^dFloat) -> ^NewtonMesh ---

    @(link_name="NewtonMeshDifference")
    NewtonMeshDifference :: proc(mesh : ^NewtonMesh, clipper : ^NewtonMesh, clipperMatrix : ^dFloat) -> ^NewtonMesh ---

    @(link_name="NewtonMeshIntersection")
    NewtonMeshIntersection :: proc(mesh : ^NewtonMesh, clipper : ^NewtonMesh, clipperMatrix : ^dFloat) -> ^NewtonMesh ---

    @(link_name="NewtonMeshClip")
    NewtonMeshClip :: proc(mesh : ^NewtonMesh, clipper : ^NewtonMesh, clipperMatrix : ^dFloat, topMesh : ^^NewtonMesh, bottomMesh : ^^NewtonMesh) ---

    @(link_name="NewtonMeshConvexMeshIntersection")
    NewtonMeshConvexMeshIntersection :: proc(mesh : ^NewtonMesh, convexMesh : ^NewtonMesh) -> ^NewtonMesh ---

    @(link_name="NewtonMeshSimplify")
    NewtonMeshSimplify :: proc(mesh : ^NewtonMesh, maxVertexCount : i32, reportPrograssCallback : NewtonReportProgress, reportPrgressUserData : rawptr) -> ^NewtonMesh ---
